# sfml-cmake-template

./: .gitignore  CMakeLists.txt  LICENSE
src/: main.cpp
